--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
+
+      <nav>
+        <button onclick="home()">home</button>
+        <button onclick="informativo()">informativo</button>
+        <button onclick="original()">original</button>
+        <button onclick="favorito()">favorito</button>
+    </nav>
+    
+ <div id="root">
+        <!-- aqui se agrega lo que hagamos en js -->
+    </div>
+
+<script src="/conexion.js"></script>
+<script src="/detalle.js"></script>
+<script src="/favorito.js"></script>
+<script src="/home.js"></script>
+<script src="/informativo.js"></script>
+<script src="/original.js"></script>
+
+</body>
+</html>
